apps/plex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    name: plex
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: baseline
